# narwhal

./: Cargo.toml  NARWHAL TO DO.txt  README.md  roadmap.txt
bins/narwhald/: Cargo.toml
bins/narwhald/src/: main.rs
clients/: app.js  broadcast.html  broadcast.js  index.html  meeting.html  meeting.js
crates/media/: Cargo.toml
crates/media/src/: lib.rs  peer.rs  rtp.rs  runtime.rs  whep.rs  whip.rs
crates/narwhal-core/: Cargo.toml
crates/narwhal-core/src/: error.rs  graph.rs  ice_queue.rs  ids.rs  lib.rs  meeting.rs  metrics.rs  policy.rs  room.rs  router.rs  session.rs
crates/server/: Cargo.toml
crates/server/src/: errors.rs  lib.rs  ws.rs
docs/: architecture.dot  config.md  observability.md  publish-flow.dot  signaling.md  subscribe-flow.dot  v1-scope.md
tests/: manual_test.sh
tests/narwhal-manual-test/: publisher-answer.sdp  publisher-offer.sdp  whip-headers.txt
tests/sdp/: publisher-offer.sdp  subscriber-offer.sdp
