[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "sync"] }
tracing = "0.1.44"
uuid = { version = "1.21.0", features = ["v4"] }

narwhal-core = { path = "../narwhal-core" }

[dev-dependencies]
futures-util = "0.3.31"
media = { path = "../media" }
tokio = { version = "1.49.0", features = ["macros", "rt", "time"] }
tokio-tungstenite = "0.28.0"
tower = { version = "0.5.2", features = ["util"] }
